add : date format to jalali

--- a/admin/package.json
+++ b/admin/package.json
@@ -22,10 +22,12 @@
     "@mui/styles": "^5.7.0",
     "@mui/x-data-grid": "^5.17.16",
     "@mui/x-date-pickers": "^5.0.10",
+    "@zoomit/dayjs-jalali-plugin": "^0.0.7",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
     "chart.js": "^4.4.0",
     "date-fns-jalali": "^2.30.0-0",
+    "dayjs": "^1.11.10",
     "final-form": "^4.20.10",
     "framer-motion": "^10.16.4",
     "immutability-helper": "^3.1.1",
