--- a/core/package.json
+++ b/core/package.json
@@ -25,6 +25,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "decompress": "^4.2.1",
     "dotenv": "^16.3.1",
     "download": "^8.0.0",
     "express": "^4.18.2",
