fix: webpack packaages

--- a/front/package.json
+++ b/front/package.json
@@ -1,119 +1,97 @@
 {
-  "name": "@nodeeweb/front",
-  "version": "0.1.5",
-  "homepage": "/",
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
-    "@mui/styles": "^5.14.11",
-    "@mui/x-data-grid": "^5.16.0",
-    "@react-oauth/google": "^0.11.1",
-    "@splidejs/react-splide": "^0.7.12",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "final-form": "^4.20.10",
-    "firebase": "^9.8.1",
-    "i18next": "^23.5.1",
-    "jalali-moment": "^3.3.11",
-    "js-cookie": "^3.0.5",
-    "notiflix": "^3.2.6",
-    "parse-link-header": "^2.0.0",
-    "querystring": "^0.2.1",
-    "react": "^18.2.0",
-    "react-color": "^2.19.3",
-    "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
-    "react-file-drop": "^3.1.4",
-    "react-final-form": "^6.5.9",
-    "react-hook-form": "^7.49.3",
-    "react-i18next": "^13.2.2",
-    "react-infinite-scroller": "^1.2.6",
-    "react-loading": "^2.0.3",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
-    "react-tagsinput": "^3.20.1",
-    "react-toastify": "^9.1.3",
-    "react-web-share": "^2.0.2",
-    "redux": "^4.2.1",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "shards-react": "^1.0.3",
-    "socket.io-client": "^4.7.2",
-    "ssh2-sftp-client": "^9.1.0",
-    "underscore": "^1.13.6",
-    "use-offline-captcha": "^0.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.23.7",
-    "@babel/preset-typescript": "^7.23.3",
-    "@craco/craco": "^7.1.0",
-    "@craco/types": "^7.1.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@types/node": "^20.10.6",
-    "@types/webpack-env": "^1.18.4",
-    "ajv": "^7",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "css-loader": "^6.8.1",
-    "dotenv": "^16.3.1",
-    "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "ftp-deploy": "^2.4.5",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "node-sass": "^9.0.0",
-    "postcss": "^8.4.33",
-    "postcss-loader": "^7.3.4",
-    "prettier": "^3.0.3",
-    "sass-loader": "^13.3.3",
-    "style-loader": "^3.3.3",
-    "typescript": "^5.2.2",
-    "webpack": "^5.89.0",
-    "webpack-bundle-analyzer": "^4.9.1",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "scripts": {
-    "dev": "craco start",
-    "start": "craco start",
-    "build": "craco build",
-    "publish": "./publish.sh",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "deploy": "node deploy/index.js",
-    "build:d": "yarn build && yarn deploy",
-    "anal": "export ANALYZE=true && set ANALYZE=true && yarn build"
-  },
-  "prettier": {
-    "bracketSpacing": true,
-    "singleQuote": true,
-    "bracketSameLine": true,
-    "trailingComma": "es5",
-    "printWidth": 80,
-    "semi": true,
-    "arrowParens": "always"
-  },
-  "imports": {
-    "#json/*": "./*.json",
-    "#assets/*": "./src/assets/*",
-    "#c/*": "./src/*.js",
-    "#img/* ": "./src/images/*"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 10",
-    "not op_mini all"
-  ]
+    "name": "@nodeeweb/front",
+    "version": "0.1.5",
+    "homepage": "/",
+    "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.11",
+        "@mui/material": "^5.14.11",
+        "@mui/styles": "^5.14.11",
+        "@mui/x-data-grid": "^5.16.0",
+        "@react-oauth/google": "^0.11.1",
+        "@splidejs/react-splide": "^0.7.12",
+        "axios": "^0.27.2",
+        "bootstrap": "^5.1.3",
+        "final-form": "^4.20.10",
+        "firebase": "^9.8.1",
+        "i18next": "^23.5.1",
+        "jalali-moment": "^3.3.11",
+        "js-cookie": "^3.0.5",
+        "notiflix": "^3.2.6",
+        "parse-link-header": "^2.0.0",
+        "querystring": "^0.2.1",
+        "react": "^18.2.0",
+        "react-color": "^2.19.3",
+        "react-device-detect": "^2.2.3",
+        "react-dom": "^18.2.0",
+        "react-file-drop": "^3.1.4",
+        "react-final-form": "^6.5.9",
+        "react-hook-form": "^7.49.3",
+        "react-i18next": "^13.2.2",
+        "react-infinite-scroller": "^1.2.6",
+        "react-loading": "^2.0.3",
+        "react-redux": "^8.1.2",
+        "react-router-dom": "^6.16.0",
+        "react-scripts": "^5.0.1",
+        "react-tagsinput": "^3.20.1",
+        "react-toastify": "^9.1.3",
+        "react-web-share": "^2.0.2",
+        "redux": "^4.2.1",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.2",
+        "shards-react": "^1.0.3",
+        "socket.io-client": "^4.7.2",
+        "ssh2-sftp-client": "^9.1.0",
+        "underscore": "^1.13.6",
+        "use-offline-captcha": "^0.2.0"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@craco/craco": "^7.1.0",
+        "@craco/types": "^7.1.0",
+        "ajv": "^7",
+        "babel-plugin-transform-remove-console": "^6.9.4",
+        "dotenv": "^16.3.1",
+        "duplicate-package-checker-webpack-plugin": "^3.0.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "ftp-deploy": "^2.4.5",
+        "prettier": "^3.0.3",
+        "typescript": "^5.2.2",
+        "webpack-bundle-analyzer": "^4.9.1"
+    },
+    "scripts": {
+        "dev": "craco start",
+        "start": "craco start",
+        "build": "craco build",
+        "publish": "./publish.sh",
+        "test": "craco test",
+        "eject": "react-scripts eject",
+        "deploy": "node deploy/index.js",
+        "build:d": "yarn build && yarn deploy",
+        "anal": "export ANALYZE=true && set ANALYZE=true && yarn build"
+    },
+    "prettier": {
+        "bracketSpacing": true,
+        "singleQuote": true,
+        "bracketSameLine": true,
+        "trailingComma": "es5",
+        "printWidth": 80,
+        "semi": true,
+        "arrowParens": "always"
+    },
+    "imports": {
+        "#json/*": "./*.json",
+        "#assets/*": "./src/assets/*",
+        "#c/*": "./src/*.js",
+        "#img/* ": "./src/images/*"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 10",
+        "not op_mini all"
+    ]
 }
