--- a/front/.env.development
+++ b/front/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://tarkhis24co.com/api/v1
-REACT_APP_SERVER_URL=https://tarkhis24co.com
+REACT_APP_API_URL=https://aranonline.shop/api/v1
+REACT_APP_SERVER_URL=https://aranonline.shop
