--- a/core/plugin-market/tel-notif/package.json
+++ b/core/plugin-market/tel-notif/package.json
@@ -4,17 +4,21 @@
   "description": "collect data from shop and send them via telegram bot",
   "main": "index.ts",
   "scripts": {
+    "start": "ts-node start.ts",
     "build": "webpack",
     "ts:build": "tsc --build"
   },
   "author": "Nodeeweb",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "cron": "^3.1.6"
+  },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "babel-loader": "^9.1.3",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
