--- a/core/plugin-market/tel-notif/package.json
+++ b/core/plugin-market/tel-notif/package.json
@@ -11,7 +11,8 @@
   "author": "Nodeeweb",
   "license": "ISC",
   "dependencies": {
-    "cron": "^3.1.6"
+    "cron": "^3.1.6",
+    "telegraf": "^4.15.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
