fix bugs, build

--- a/core/plugin-market/tel-notif/config.json
+++ b/core/plugin-market/tel-notif/config.json
@@ -7,7 +7,7 @@
   },
   "type": "general",
   "author": "Nodeeweb",
-  "main": "index.ts",
+  "main": "dist/bundle.js",
   "slug": "tel-notif",
   "config": {
     "inputs": [
