--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -38,6 +38,7 @@
     "plugin-market/chat-gpt/index.ts",
     "plugin-market/tel-notif/dist",
     "plugin-market/tel-notif/src",
-    "plugin-market/tel-notif/index.ts"
+    "plugin-market/tel-notif/index.ts",
+    "plugin-market/tel-notif/start.ts"
 ]
 }
