--- a/admin/package.json
+++ b/admin/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@date-io/date-fns-jalali": "^2.17.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/styles": "^5.7.0",
     "@mui/x-data-grid": "^5.17.16",
     "@mui/x-date-pickers": "^5.0.10",
