--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@material-ui/core": "^5.0.0-beta.5",
     "react-hook-form": "^7.50.0",
     "react-toastify": "^10.0.4"
   }
