fix a lots of warning about some components can not be used as jsx component

--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "#c/*": ["./src/*"]
+      "#c/*": ["./src/*"],
+      "react": ["./node_modules/@types/react"]
     },
     "incremental": true,
     "checkJs": true
